# yaz

./: .cproject  .cvsignore  .editorconfig  .gitignore  .gitmodules  .project  .travis.yml  BUILD  CHANGELOG  Doxyfile.in  IDMETA  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  WORKSPACE  aclocal.m4  appveyor.yml  buildconf.sh  configure  configure.ac  configure.in  header.c  mkinstalldirs  upload.sh  util.bzl  windows.txt  yaz-config.in  yaz-icu.pc.in  yaz-server.pc.in  yaz.dsp  yaz.dsw  yaz.m4  yaz.pc.in  yaz.spec  yaz.spec.in  (+1 more)
asn/: Makefile  Makefile.am  Makefile.in  diagbib1.c  proto.c  prt-acc.c  prt-acc.h  prt-add.c  prt-add.h  prt-arc.c  prt-arc.h  prt-dat.c  prt-dat.h  prt-dia.c  prt-dia.h  prt-esp.c  prt-esp.h  prt-exd.c  prt-exp.c  prt-ext.c  prt-grs.c  prt-grs.h  prt-proto.h  prt-rsc.c  prt-rsc.h  prt-univ.c  test.c  zget.c
ccl/: .cvsignore  LICENSE  Makefile  Makefile.am  Makefile.in  README  bib1  cclerrms.c  cclfind.c  cclptree.c  cclqfile.c  cclqual.c  cclsh.c  cclstr.c  ccltoken.c  tstccl.c
client/: .cvsignore  .gitignore  BUILD  Makefile  Makefile.am  Makefile.in  admin.c  admin.h  bertorture.c  client.c  client.dsp  default.bib  fhistory.c  fhistory.h  tabcomplete.c  tabcomplete.h
cql/: .cvsignore  Makefile.am  cql.y  cql2pqf.c  cql2xcql.c  cqlstdio.c  cqlstrer.c  cqlstring.c  cqltransform.c  cqlutil.c  lexer.c  xcqlutil.c
doc/: .cvsignore  .editorconfig  .gitignore  BUILD  Doxyfile  Makefile  Makefile.am  Makefile.in  README  asn.xml  bib1-attr-man.xml  bib1-man.xml  book.xml  bookinfo.xml  client.xml  comstack.xml  credits.xml  entities.ent  frontend.xml  future.xml  gfs-options.xml  gfs-synopsis.xml  gfs-virtual.xml  id.html5.xsl  indexdata.sh  indexdata.xml  installation.xml  introduction.xml  license.xml  listings-setup.tex  local.ent.in  odr.xml  profiles.sgml  server.xml  soap.xml  tkl.xsl.in  tools.xml  yaz-asncomp-man.xml  yaz-client-commands.xml  yaz-client-man.xml  (+34 more)
etc/: MARC21slim2DC.xsl  MARC21slim2MODS.xsl  MARC21slim2RDFDC.xsl  MARC21slimUtils.xsl  Makefile.am  cqlpass.properties  debian.init.d  maps.xml  marc21_to_endnote.xsl  opacxml.xsd  pqf.properties  yazgfs.xml
ill/: .cvsignore  Makefile.am  Makefile.in  ill-core.c  ill-get.c  ill.tcl  ill9702.asn  item-req.c
include/yaz/: .cvsignore  .gitignore  Makefile.am  Makefile.in  backend.h  base64.h  ccl.h  ccl_xml.h  charneg.h  comstack.h  config.h.in  cookie.h  copy_types.h  cql.h  d1_attset.h  d1_map.h  daemon.h  (+115 more)
lib/: .cvsignore  .gitignore  Makefile.am  Makefile.in  yaz-config.in
odr/: .cvsignore  Makefile  Makefile.am  Makefile.in  ber_any.c  ber_bit.c  ber_bool.c  ber_int.c  ber_len.c  ber_null.c  ber_oct.c  ber_oid.c  ber_tag.c  dumpber.c  odr-priv.h  odr.c  odr_any.c  odr_bit.c  odr_bool.c  odr_choice.c  odr_cons.c  odr_enum.c  odr_int.c  odr_mem.c  odr_null.c  odr_oct.c  odr_oid.c  odr_priv.c  odr_seq.c  odr_tag.c  odr_unicode.c  odr_use.c  odr_util.c  test.c  tstodr.asn  tstodr.c
retrieval/: .cvsignore  Makefile  Makefile.am  Makefile.in  d1_absyn.c  d1_attset.c  d1_doespec.c  d1_espec.c  d1_expat.c  d1_expout.c  d1_grs.c  d1_handle.c  d1_if.c  d1_map.c  d1_marc.c  d1_prtree.c  d1_read.c  d1_soif.c  d1_sumout.c  d1_sutrs.c  d1_tagset.c  d1_varset.c  d1_write.c
srw/: .cvsignore  Makefile.am  srw-diag.c  srw-namespace.c  srw-server.c  srw-xcql.c  srw-xslt.c  zing.h
srwapps/: Makefile.am  srw-client.c  srw-gateway.c
tab/: Makefile.am  Makefile.in  bib1.att  dan1.att  danmarc.abs  danmarc.mar  explain.abs  explain.att  explain.tag  generic.tag  gils-a.est  gils-b.est  gils-f.est  gils-g.est  gils-summary.map  gils-usmarc.map  gils-variant.est  gils.abs  gils.att  gils.tag  meta-b.est  meta-usmarc.map  meta.abs  meta.tag  summary.abs  summary.tag  tagsetg.tag  tagsetm.tag  usmarc-b.est  usmarc.abs  usmarc.mar  usmarc.tag  var1.var  wais-b.est  wais-variant.est  wais.abs
test/: .cvsignore  .gitignore  Makefile.am  cql2pqf-order.txt  cql2pqfsample  cql2xcqlsample  cqlsample  marc1.json  marc1.json.marc  marc1.xml  marc10.json  marc10.xml  marc10.xml.marc  marc11.json.marc  marc11.marc  marc11.xml  marc2.json  marc2.xml  marc2.xml.marc  marc3.json.marc  marc3.xml  marc4.json  marc4.json.marc  marc4.xml  marc5.xml  marc6.json  marc6.xml  marc6.xml.marc  marc7.xml  marc9.json.marc  marc9.xml  marccol1.u8.1.lst  marccol1.u8.2.lst  marccol3.u8.1.lst  marccol5.u8.1.lst  marccol5.u8.2.lst  marccol5.u8.marc  nfatest1.c  nfaxmltest1.c  pqf2cqlsample  (+131 more)
util/: .cvsignore  .gitignore  BUILD  Makefile  Makefile.am  Makefile.in  atoin.c  benchmark.c  bib1  cclsh.c  charconv.sgm  charconv.tcl  cql2pqf.c  cql2xcql.c  cvs-date.tcl  dmalloc.c  ill-params.txt  json-parse.c  log.c  logrpn.c  marcdisp.c  marcdump.c  matchstr.c  nmem.c  nmemsdup.c  oid.c  options.c  otherinfo.c  pqf2pqf.xsl  pquery.c  query.c  readconf.c  siconv.c  siconvtst.c  srwtst.c  tpath.c  tsticonv.c  tstmatchstr.c  tstnmem.c  tstwrbuf.c  (+15 more)
z39.50/: .cvsignore  Makefile.am  Makefile.in  charneg-3.asn  comp.sh  datetime.asn  esadmin.asn  oclcui.asn  prt-ext.c  z-accdes1.c  z-accform1.c  z-acckrb1.c  z-core.c  z-date.c  z-diag1.c  z-espec1.c  z-estask.c  z-exp.c  z-grs.c  z-opac.c  z-rrf1.c  z-rrf2.c  z-sum.c  z-sutrs.c  z-uifr1.c  z-univ.c  z.tcl  z3950v3.asn  zes-admin.c  zes-expi.c  zes-exps.c  zes-order.c  zes-pquery.c  zes-psched.c  zes-pset.c  zes-update.c  zes-update0.c
zoom/: .cvsignore  .gitignore  BUILD  Makefile.am  zoom-benchmark.c  zoom-benchmark.gpt  zoom-bug-641.c  zoom-c.c  zoom-ka.c  zoom-opt.c  zoom-p.h  zoomsh.c  zoomtst1.c  zoomtst10.c  zoomtst11.c  zoomtst2.c  zoomtst3.c  zoomtst4.c  zoomtst5.c  zoomtst6.c  zoomtst7.c  zoomtst8.c  zoomtst9.c
ztest/: .gitignore  BUILD  Makefile  Makefile.am  Makefile.in  config1.xml  dummy-grs  dummy-opac.c  gfs-example.c  read-grs.c  read-marc.c  ztest.c  ztest.dsp  ztest.h  ztest.pem
zutil/: .cvsignore  Makefile.am  Makefile.in  charneg.c  diagbib1.c  grs1disp.c  logrpn.c  opacdisp.c  otherinfo.c  pquery.c  prt-ext.c  query.c  soap.c  sortspec.c  srw.c  srwtst.c  yaz-ccl.c  z3950oid.c  zgdu.c  zget.c  zoom-c.c  zoom-opt.c  zoom-p.h
(+534 files in other folders)
